--- a/trunk/ifpitaco/res/layout/activity_splash_screen.xml
+++ b/trunk/ifpitaco/res/layout/activity_splash_screen.xml
@@ -4,9 +4,13 @@
     android:layout_height="match_parent"
     tools:context="${packageName}.${activityClass}" >
 
-    <TextView
+    <ImageView
+        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="88dp"
+        android:src="@drawable/logo" />
 
 </RelativeLayout>
