--- a/trunk/ifpitaco_mobile/res/layout/activity_funcoes_list.xml
+++ b/trunk/ifpitaco_mobile/res/layout/activity_funcoes_list.xml
@@ -1,14 +1,28 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="br.edu.ifpb.ifpitaco_mobile.FuncoesListActivity"
+    android:background="@drawable/background01">
+
+<LinearLayout 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_marginTop="70px"
+    android:layout_marginBottom="70px">    
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${packageName}.${activityClass}" >
 
     <ListView
         android:id="@+id/myListView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
     </ListView>
+  
+</LinearLayout>
 
-</RelativeLayout>
 
+</LinearLayout>
