--- a/trunk/ifpitaco_mobile/res/layout/activity_login.xml
+++ b/trunk/ifpitaco_mobile/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
     	     android:id="@+id/usuarioView"
     	     android:layout_width="wrap_content"
     	     android:layout_height="wrap_content"
-    	     android:text="Usuário"
+    	     android:text="Usuário:"
     	     android:textSize="20sp" />
 
         <EditText
@@ -44,7 +44,7 @@
             android:id="@+id/senhaTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Senha"
+            android:text="Senha:   "
             android:textSize="20sp" />
 
         <EditText
@@ -56,7 +56,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/BtEntrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Entrar" />
