--- a/trunk/ifpitaco_mobile/res/layout/activity_propor.xml
+++ b/trunk/ifpitaco_mobile/res/layout/activity_propor.xml
@@ -17,12 +17,12 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Fiscalize:"
+            android:text="Proponha:"
             android:textAppearance="?android:attr/textAppearanceLarge" 
             android:layout_gravity="left"/>
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/ETPropor1"
             android:layout_width="match_parent"
             android:layout_height="250px"
             android:ems="10" >
@@ -31,7 +31,7 @@
         </EditText>
 
         <Button
-            android:id="@+id/BtEnvFiscaliza"
+            android:id="@+id/BtEnvProposta"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
