Melhoras na interface e criação de funcionalidades.

--- a/ifpitaco_mobile/res/layout/activity_avaliar.xml
+++ b/ifpitaco_mobile/res/layout/activity_avaliar.xml
@@ -1,12 +1,36 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}" >
+    android:background="@drawable/background01"
+    android:orientation="vertical"
+    tools:context="br.edu.ifpb.ifpitaco_mobile.LoginActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_activity_avaliar" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="30px"
+        android:gravity="center"
+        android:orientation="vertical" >
 
-</RelativeLayout>
+        <Spinner
+            android:id="@+id/SpEntidadesAvaliar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <RatingBar
+            android:id="@+id/NotaAvaliar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/BtEnvAvaliar"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="Enviar" />
+
+    </LinearLayout>
+
+</LinearLayout>
