--- a/trunk/ifpitaco_mobile/res/layout/activity_propor.xml
+++ b/trunk/ifpitaco_mobile/res/layout/activity_propor.xml
@@ -13,8 +13,21 @@
     	android:layout_margin="30px"
     	>
 
-        <TextView
+        <TextView 
             android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Seleciona o ramo:"
+            android:textAppearance="?android:attr/textAppearanceLarge" 
+            android:layout_gravity="left"/>
+        
+        <Spinner
+            android:id="@+id/SpEntidadesPropor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        
+        <TextView
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Proponha:"
@@ -24,7 +37,7 @@
         <EditText
             android:id="@+id/ETPropor1"
             android:layout_width="match_parent"
-            android:layout_height="250px"
+            android:layout_height="200px"
             android:ems="10" >
 
             <requestFocus />
