--- a/ifpitaco_mobile/res/layout/activity_fiscalizar.xml
+++ b/ifpitaco_mobile/res/layout/activity_fiscalizar.xml
@@ -12,7 +12,20 @@
     	android:gravity="center"
     	android:layout_margin="30px"
     	>
-
+    	
+		<TextView 
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Seleciona o ramo:"
+            android:textAppearance="?android:attr/textAppearanceLarge" 
+            android:layout_gravity="left"/>
+        
+        <Spinner
+            android:id="@+id/SpEntidadesFiscalizar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
@@ -24,7 +37,7 @@
         <EditText
             android:id="@+id/editText1"
             android:layout_width="match_parent"
-            android:layout_height="250px"
+            android:layout_height="200px"
             android:ems="10" >
 
             <requestFocus />
