--- a/ifpitaco_mobile/res/layout/activity_login.xml
+++ b/ifpitaco_mobile/res/layout/activity_login.xml
@@ -1,66 +1,71 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="br.edu.ifpb.ifpitaco_mobile.LoginActivity"
-    android:gravity="center"
     
     android:background="@drawable/background01" >
 
-    
-    <LinearLayout android:layout_marginLeft="30px"
-    	android:layout_marginRight="30px"
-    	android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:orientation="vertical"
-    	android:gravity="center"> 
+    <TextView
+        android:id="@+id/senhaTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/ETSenhaUsuario"
+        android:layout_alignParentLeft="true"
+        android:text="Senha:   "
+        android:textSize="20sp" />
 
-    <LinearLayout  android:layout_width="match_parent"
-    	android:layout_height="wrap_content"
-    	android:orientation="horizontal">
+    <TextView
+        android:id="@+id/usuarioView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/ETEmailUsuario"
+        android:layout_alignRight="@+id/senhaTextView"
+        android:text="Usuário:"
+        android:textSize="20sp" />
 
-    	 <TextView
-    	     android:id="@+id/usuarioView"
-    	     android:layout_width="wrap_content"
-    	     android:layout_height="wrap_content"
-    	     android:text="Usuário:"
-    	     android:textSize="20sp" />
+    <EditText
+        android:id="@+id/ETEmailUsuario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ETSenhaUsuario"
+        android:layout_alignLeft="@+id/cadastroTextView"
+        android:layout_marginBottom="26dp"
+        android:ems="10"
+        android:inputType="textEmailAddress" />
 
-        <EditText
-            android:id="@+id/ETNomeUsuario"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
-
-        </EditText>
-        
-    </LinearLayout>
-    <LinearLayout
+    <EditText
+        android:id="@+id/ETSenhaUsuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        
-        <TextView
-            android:id="@+id/senhaTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Senha:   "
-            android:textSize="20sp" />
+        android:layout_above="@+id/BtEntrar"
+        android:layout_alignLeft="@+id/ETEmailUsuario"
+        android:layout_alignRight="@+id/ETEmailUsuario"
+        android:layout_marginBottom="36dp"
+        android:ems="10"
+        android:inputType="textPassword" >
 
-        <EditText
-            android:id="@+id/ETSenhaUsuario"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword" >
-        </EditText>
-    </LinearLayout>
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/cadastroTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="48dp"
+        android:text="Cadastre-se"
+        android:textSize="25sp"/>
 
     <Button
         android:id="@+id/BtEntrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/cadastroTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="46dp"
         android:text="Entrar" />
-    
-    </LinearLayout>  
 
-</LinearLayout>
+</RelativeLayout>
