--- a/trunk/ifpitaco_mobile/res/layout/activity_avaliar.xml
+++ b/trunk/ifpitaco_mobile/res/layout/activity_avaliar.xml
@@ -14,12 +14,12 @@
         android:orientation="vertical" >
 
         <Spinner
-            android:id="@+id/SpEntidadesAvaliar"
+            android:id="@+id/spEntidadesAvaliar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <RatingBar
-            android:id="@+id/NotaAvaliar"
+            android:id="@+id/rbNotaAvaliar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
