--- a/trunk/WebClient/css/cadastrar.css
+++ b/trunk/WebClient/css/cadastrar.css
@@ -9,3 +9,7 @@ max-height: 300px;
 -webkit-box-shadow: 0px 0px 20px 4px #888888;
 box-shadow: 0px 0px 28px 8px #888888;
 }
+
+label > span{
+	margin-right: 10px;
+}
