--- a/trunk/WebClient/css/cadastrar.css
+++ b/trunk/WebClient/css/cadastrar.css
@@ -2,8 +2,7 @@
 
 
 .preview {
-max-width: 300px;
-max-height: 300px;
+max-width: 100%;
 
 -moz-box-shadow: 0px 0px 20px 4px #888888;
 -webkit-box-shadow: 0px 0px 20px 4px #888888;
