--- a/WebClient/css/cadastrar.css
+++ b/WebClient/css/cadastrar.css
@@ -12,3 +12,27 @@ box-shadow: 0px 0px 28px 8px #888888;
 label > span{
 	margin-right: 10px;
 }
+
+.radios{
+	font-size: 18px;
+	margin-bottom: 8px;
+}
+
+.curso{
+	display: inline;
+	max-width: 84%;
+}
+
+.ano_periodo{
+	max-width: 14.8%;
+	display: inline;
+	padding : 5px;
+}
+
+#aluno{
+	margin-bottom: 20px;
+}
+
+#professor{
+	margin-bottom: 10px;
+}
