--- a/WebClient/css/enquete_form.css
+++ b/WebClient/css/enquete_form.css
@@ -1,10 +1,6 @@
 
-   		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 .fnenquete li{
 	margin-bottom: 4px;
-
 }
 
 #img_new_enquete{
@@ -18,6 +14,10 @@
 	font-weight: bold;
 	color: black;
 	font-size: 18px;
+}
+
+#next{
+	padding: 10px;
 }
 
 .data{
@@ -44,18 +44,25 @@
 	
 	padding: 5px;
 	font-size: 20px;
-	color: #505050;
+	color: black;
 	margin: 10px;
 }
 
-.radio:hover{
+/*.radio:hover{
 	color: #d9534f;
 	font-weight: bold;
 	font-size: 16px;
+}*/
+
+.enquete label{
+	 color: black;
 }
 
 .enquete{
 	word-wrap: break-word;
+
+
+	padding: 10px;
 }
 
 .enquete .bot{
@@ -65,6 +72,10 @@
 
 .enquete .radio {
 	margin: 10px;
+}
+
+.enquete h4{
+	color: black;
 }
 
 #myChart{
