--- a/trunk/WebClient/css/index.css
+++ b/trunk/WebClient/css/index.css
@@ -35,7 +35,7 @@ p{
 	margin-bottom: 100px;
 }
 
-
+/* glyphicon glyphicon-user inside input */
 /* enable absolute positioning */
 .inner-addon { 
     position: relative; 
@@ -55,5 +55,5 @@ p{
 /* add padding  */
 .left-addon input  { padding-left:  30px; }
 .right-addon input { padding-right: 30px; }
-
+/* glyphicon glyphicon-user inside input */
 
