--- a/WebClient/css/home.css
+++ b/WebClient/css/home.css
@@ -19,7 +19,6 @@ a{
 #profile a:hover{
 	text-decoration: none;
 }
-
 a:hover{
 	color: inherit;
 }
@@ -28,10 +27,6 @@ body{
 	word-wrap: break-word;
 	background-image:url('../images/pattern-6plj.png');
 	font-family: Helvetica,Arial,sans-serif;
-}
-
-#bar{
-
 }
 
 .well{
@@ -53,9 +48,13 @@ body{
 	
 }
 
+#bar{
+	height: 10px;
+}
+
 #logo{
 	height: 50px;
-	margin-top: -12px;
+	margin-top: -14px;
 }
 
 
