--- a/WebClient/css/search.css
+++ b/WebClient/css/search.css
@@ -1,18 +1,35 @@
 
 #search_form{
 	width: 400px;
+	display: inline-block;
+	margin: 8px;
+	margin-left: 110px;
+	
 }
 
 #search_list{
 	width: 400px;
-}
-.user_searched{
-	width: 400px;
-	background-color: white;
+	position: absolute;
 	
+	margin-top: 40px;
+	z-index: 4;
+	background-color: white;
+}
+/*É removido após search list, mas é necessário ter as mesmas propriedades para não ocorrer overflow*/
+#search_list_old{
+	width: 400px;
+	position: absolute;
+	
+	margin-top: 40px;
+	z-index: 4;
+	background-color: white;
 }
 
-.user_searched h3, h5{
+.user_searched{
+	width: 400px;
+}
+
+.user_searched h3, .user_searched h5{
 	margin: 0px;
 	padding: 0px;
 	margin-left: 70px;
@@ -22,7 +39,7 @@
 	padding-bottom: 10px;
 }
 
-.user_searched h3, img{
+.user_searched{
 	padding-top: 10px;
 }
 
