--- a/trunk/WebClient/css/comentario.css
+++ b/trunk/WebClient/css/comentario.css
@@ -33,9 +33,22 @@
 	color: #3b5998;
 }
 
+.bot #curiar{
+	
+
+	color: black;
+	margin-left: 425px;
+	margin-top: 17px;
+	font-size: 12px;
+	position: absolute;
+	opacity: 0.7;
+}
+
+
 .post:hover > .top > i{
 	opacity: 0.2;
 }
+
 
 .post > .top i:hover{
 	cursor: pointer;
@@ -94,8 +107,6 @@
 }
 
 .comentario .content{
-	
-
 	margin-left: 45px;
 	margin-right: 20px;
 
