[WEBCLIENT] Refatoramento: Concluído

--- a/WebClient/js/pace/templates/pace-theme-loading-bar.tmpl.css
+++ b/WebClient/js/pace/templates/pace-theme-loading-bar.tmpl.css
@@ -80,7 +80,7 @@
   top: 4px;
 }
 
-`
+/*
 var out = '';
 
 for (var i = 0; i < 101 ; i++) {
@@ -88,7 +88,7 @@ for (var i = 0; i < 101 ; i++) {
 }
 
 out
-`
+*/
 
 .pace .pace-activity {
   position: absolute;
