--- a/WebClient/css/user_profile.css
+++ b/WebClient/css/user_profile.css
@@ -58,3 +58,14 @@ a{
 a:hover{
 	color: inherit;
 }
+
+
+.online {
+    color: green;
+    font-size: 18px;
+}
+
+.offline{
+    color: #d9534f;
+    font-size: 16px;
+}
